compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/LocalInAnnotation.kt
// Validation
// See KT-24323

@Retention(AnnotationRetention.RUNTIME /* ) was removed */
                   annotation class Validation()

